--- a/public/app.css
+++ b/public/app.css
@@ -1,6 +1,6 @@
 html {
   font-family: system-ui;
-  font-size: 2rem;
+  font-size: 3rem;
   overflow: hidden;
 }
 
@@ -24,6 +24,7 @@ body {
 
 .nav-button {
   flex: 1;
+  min-height: 10vh;
 }
 
 .card {
